- Añadido el RaisePropertyChanged sobre el campo TablaALOJAMIENTOS.altitud
- En Poblaciones.xaml he hecho la asociación con su VM.
También he añadido un Behavior a la ListView de forma que el evento ItemTapped se convierte en el comando ItemTappedCommand mediante el prism:EventToCommandBehavior

- En el CellPoblacion.xaml he conseguido que aunque la ViewCell queda vinculada con TablaPOBLACIONES, hay un botón que he asociado al PoblacionesVM donde ejecutará el comando VerAlojamientosDePoblacion.

- Añadido el EntryPOBLACIONESViewModel

- En el PoblacionesVM se ha añadido el RaisePropertyChanged a la ObservableCollection que se carga en la ListView con las poblaciones.
También se añade el tratamiento del botón de la barra superior para añadir una nueva población (AddPoblacionClicked).
También se añade el ItemTappedCommand que permite editar la población abriendo un EntryPOBLACIONES.
También se añade el método asociado al botón que aparece junto a cada nombre de población que abre la ventana "Ver" donde se mostrarán los albregues que hay en esa población.
También había hecho una prueba que he dejado comentada en el OnNavigatedTo que lo que hacía era detectar si llegába al método con un "Back" y en ese caso llamaba a CargarPoblacionesAsync() para recargar la lista de poblaciones en la ListView.

--- a/YPA/YPA.csproj
+++ b/YPA/YPA.csproj
@@ -37,6 +37,9 @@
     <EmbeddedResource Update="Views\Formularios\EntryPOBLACIONES.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="Views\Formularios\PruebaUno.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="Views\MainMasterDetail.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
