- Se cambia CellEtapaCamino por CellNodoCamino. Y el nuevo CellEtapaCamino es el que utiliza DialogoMiCamino para mostrar las etapas elegidas. No se veían los valores de la clase Etapa porque no erán public. Es posible que en DialogoMiCaminoVM haya tenido que añadir también lo de RaisePropertyChanged a Message para que se mostrase.

--- a/YPA/YPA.csproj
+++ b/YPA/YPA.csproj
@@ -13,6 +13,12 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Update="Views\DataTemplates\CellNodoCamino.xaml.cs">
+      <DependentUpon>CellNodoCamino.xaml</DependentUpon>
+    </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
     <EmbeddedResource Update="Dialogs\DialogoMiCamino.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
@@ -29,6 +35,9 @@
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
     <EmbeddedResource Update="Views\DataTemplates\CellEtapaCamino.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Update="Views\DataTemplates\CellNodoCamino.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
     <EmbeddedResource Update="Views\Formularios\EntryALOJAMIENTOS.xaml">
