- Global.cs: Se llevan las funciones MasajearLista y RellenarLista desde VerCaminoVM.cs al Global.cs y se hacen static.
- Database.cs: Nuevos métodos relacionados con MisCaminos.

- DialogoMiCamino: Se mejora el listado que muestra.

- Tanlas.cs: Cambios en la tabla TablaMisCaminos con nuevos campos y añadiendo la interfaz IEquatable y el método Equals().

- Nuevo MisCaminosVM.cs para mostrar los caminos creados por el usuario.

- VerCaminoVM.cs: Cambios relacionados con el tema de llevar las funciones RellenarLista y MasajearLista al Global.cs.

miLista deja de ser una propiedad y pasa a ser un campo más para poder ser pasado como "ref" en las llamadas.

Se añade el método GuardarCamino() para que el usuario pueda guardar las etapas de su camino.

Se amplia la funcionalidad del método OnNavigatedTo() para que pueda recibir como parámetros o bien el "caminoActual" o bien un registro de la tabla TablaMisCaminos.

- Nuevo MisCaminos.xaml que muestra un listado de "CellMiCamino" con los caminos creados por el usuario.

- Nuevo VerEtapas.xaml que muestra un listado de CellMisEtapas

--- a/YPA/YPA.csproj
+++ b/YPA/YPA.csproj
@@ -37,6 +37,12 @@
     <EmbeddedResource Update="Views\DataTemplates\CellEtapaCamino.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="Views\DataTemplates\CellMiCamino.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Update="Views\DataTemplates\CellMisEtapas.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="Views\DataTemplates\CellNodoCamino.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
@@ -55,10 +61,16 @@
     <EmbeddedResource Update="Views\MainMasterDetail.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="Views\MisCaminos.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="Views\Ver.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
     <EmbeddedResource Update="Views\VerCamino.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Update="Views\VerEtapas.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
   </ItemGroup>
