--- a/YPA/YPA.csproj
+++ b/YPA/YPA.csproj
@@ -22,6 +22,9 @@
     <EmbeddedResource Update="Dialogs\DialogoMiCamino.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="Dialogs\MenuMisEtapas.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="Views\Alojamientos.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
