- He metido un target que es "_xx_ETAPAS" en relación con el tema de visualizar y modificar etapas.
- Se prepara el esqueleto de llamadas entre VerEtapas y MenuMisEtapas a la hora de visualizar las opciones del menú sobre un diálogo y obtener la respuesta en un callback:

Mirar cómo pasar parámetros en el callback de vuelta del diálogo: CloseDialogCallback   Done!!   Se hace así:
- Abrir el diálogo:
  _dialogService.ShowDialog("MenuMisEtapas", param1, CloseDialogCallback);
- En el OnDialogOpened se reciben esos parámetros param1:
  etapa = parameters.GetValue<Etapa>("etapa");
- Y luego, desde una de las DelegateCommand que atienden cada una de las opciones mostradas en el diálogo se hace esto para devolver al callback incial los parámetros que queramos:
  listaSTR_Etapas = listaSTR_Etapas + "Deseiro;Aldrei;";
  DialogParameters param = new DialogParameters();
  param.Add("listaEtapas", listaSTR_Etapas);
  RequestClose(param);
- En el callback del que llama, es decir, en CloseDialogCallback() leeré esos parámetros devueltos así:
  bool hayCambios = obj.Parameters.GetValue<bool>("hayCambios");
  string nuevaListaEtapas = obj.Parameters.GetValue<string>("listaEtapas");

- En Global.cs he introducido la cadena estática "nombreFicheroDeMiCamino" donde se supone que guardaré el nombre del camino que estoy manejando a la hora de modificar y guardar las etapas.

- En RellenarLista, cuando no se recarga la lista desde la BD, lo que sí se hace es actualizar la información sobre qué nodos son etapa o no.

- En VerEtapasVM se añade la variable miTMC.
También se implementa el DelegateCommand asociado a OpcionesSobreEtapa.
Se prepara el callback CloseDialogCallback() que será invocado al volver del diálogo "MenuMisEtapas".

- Se cambia el nombre de CellMiCamino por CellMisCaminos

--- a/YPA/YPA.csproj
+++ b/YPA/YPA.csproj
@@ -40,7 +40,7 @@
     <EmbeddedResource Update="Views\DataTemplates\CellEtapaCamino.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
-    <EmbeddedResource Update="Views\DataTemplates\CellMiCamino.xaml">
+    <EmbeddedResource Update="Views\DataTemplates\CellMisCaminos.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
     <EmbeddedResource Update="Views\DataTemplates\CellMisEtapas.xaml">
